/*
 * Copyright 2022, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.commandbus;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.commandbus.command";
option java_outer_classname = "CommandBusCommandsProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine/test/commandbus/project.proto";

message CmdBusStartProject {

    ProjectId project_id = 1;
}

message CmdBusCreateProject {

    ProjectId project_id = 1;
}

message CmdBusAddTask {
    ProjectId project_id = 1;
    Task task = 2;
}

message CmdBusRemoveTask {
    ProjectId project_id = 1;
    Task task = 2;
}

// A command to create a project for duplicate command tests.
//
message DCmdBusCreateProject {
    ProjectId project_id = 1;
}

// A command to create a project to test the command posting order.
//
// This command is to be sent first.
//
message FirstCmdBusCreateProject {

    ProjectId id = 1;

    string name = 2;
}

// A command to start a project to test the command posting order.
//
// This command is to be sent second, as a part of the `FirstCmdCreateProject` handling.
//
message SecondCmdBusStartProject {

    ProjectId id = 1;
}

message CmdBusCreateTask {
    TaskId task_id = 1;
    Task task = 2;
    bool start = 3;
}

message CmdBusAssignTask {
    TaskId task_id = 1;
    core.UserId assignee = 2;
}

message CmdBusStartTask {
    TaskId task_id = 1;
}

message CmdBusSetTaskDescription {
    TaskId task_id = 1;
    string description = 3;
}

// A command to create multiple labels at once.
//
// The client does not know how this command is routed. When constructing a command message,
// the client simply adds the label names. The server takes care of routing the command.
//
message CmdBusCreateLabels {
    repeated string label = 1 [(required) = true];
}
